<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/splashLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".store.SplashScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/upper">

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/relative"-->
        <!--android:orientation="vertical">-->



        <ImageView
            android:id="@+id/splashView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash"
            android:contentDescription="@string/todo"
            android:foregroundGravity="center"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />
        <!--</LinearLayout>-->

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="#03353C"
            android:background="#00000000"
            android:text="@string/company_name"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!--<ImageView-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:background="@drawable/logo"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:padding="20dp"-->
                <!--android:layout_marginTop="75dp"/>-->

            <RelativeLayout
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="50dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/shine"
                    android:layout_width="50dp"
                    android:layout_marginLeft="-50dp"
                    android:layout_height="170dp"
                    android:src="@drawable/shine_drawable" />
            </RelativeLayout>


            <TextView
                android:id="@+id/appNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="@dimen/app_name_text_size"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/text_color"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
