<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aggregator.dashbord.ItemDetailsAggrigator">



    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/app_bar_main">
        </include>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_top"
        android:layout_below="@id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/scroll_top">
    <androidx.cardview.widget.CardView
        android:id="@+id/linear_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/parcel_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="5dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/photo_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Order id:"
                    android:layout_below="@id/parcel_image"
                    android:padding="@dimen/text_padding"
                    android:layout_marginEnd="5dp"/>
                <TextView
                    android:id="@+id/order_id_aggregator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="123456"
                    android:textColor="@color/black"
                    android:layout_below="@id/parcel_image"
                    android:layout_marginStart="10dp"
                    android:padding="@dimen/text_padding"
                    android:layout_marginEnd="5dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/parcel_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Documents"
                android:layout_below="@id/parcel_image"
                android:padding="@dimen/text_padding"
                android:textAllCaps="true"
                android:layout_marginTop="5dp"
                android:gravity="start|center"
                android:layout_marginStart="5dp"
                android:drawablePadding="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/parcel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:layout_below="@id/parcel_type"
                android:padding="@dimen/text_padding"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:maxLines="2"
                android:textSize="13dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"
                android:layout_marginEnd="5dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/parcel_description"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/you_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/text_padding"
                    android:text="@string/you_get_money"
                    android:textSize="@dimen/small_text"
                    />
                <TextView
                    android:id="@+id/total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/text_padding"
                    android:text="@string/rupees_symbol"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text"
                    android:textStyle="bold" />


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"></View>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/parcel_details"
            android:layout_below="@+id/delivery_address_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/parcel_details"
                    android:background="@color/card_background_light"
                    android:textColor="@color/text_color_light"
                    android:textSize="@dimen/mid_text"
                    android:drawableTint="@color/icon_color"
                    android:drawableStart="@drawable/description"
                    android:gravity="start|center"
                    android:drawablePadding="3dp"
                    android:maxLines="2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/text_padding"
                        android:maxLines="2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="500gm"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/text_padding"
                        android:maxLines="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demintion"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/text_padding"
                        android:maxLines="2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10 x 10x 10 cm"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/text_padding"
                        android:maxLines="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/text_padding"
                        android:maxLines="2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text = "Document"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/text_padding"
                        android:maxLines="2"/>
                </LinearLayout>

<!--                <View-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:background="@color/grey"></View>-->
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="5dp">

                <Button
                    android:id="@+id/button_accept"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="Accept"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginEnd="2dp"
                    android:elevation="10dp"
                    android:background="@drawable/accept_button"/>

                <Button
                    android:id="@+id/button_reject"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Reject"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/text_color_light"
                    android:elevation="10dp"
                    android:background="@drawable/reject_btn"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>